@@ -1,6 +1,6 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="Single" verbose="9" parallel="false"  >
+<suite name="Single" verbose="2" parallel="false"  >
   
   <test name="TestSingle">
 <!--
@@ -9,9 +9,11 @@
         <include name="trial"/>
       </run>
     </groups>
+      <class name="test.configuration.ExternalConfigurationClass"/>
 -->
     <classes>
-      <class name="test.tmp.A" />
+      <class name="test.configuration.SuiteTest" />
+      <class name="test.configuration.VerifySuiteTest" />
     </classes>
   </test>
 
